--- a/mapclientplugins/pointcloudpartitionerstep/qt/pointcloudpartitionerwidget.ui
+++ b/mapclientplugins/pointcloudpartitionerstep/qt/pointcloudpartitionerwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>884</width>
-    <height>761</height>
+    <height>859</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,22 +44,22 @@
 QTableView::item { padding: 3px; }</string>
              </property>
              <property name="sizeAdjustPolicy">
-              <enum>QAbstractScrollArea::AdjustIgnored</enum>
+              <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustIgnored</enum>
              </property>
              <property name="dragEnabled">
               <bool>true</bool>
              </property>
              <property name="dragDropMode">
-              <enum>QAbstractItemView::InternalMove</enum>
+              <enum>QAbstractItemView::DragDropMode::InternalMove</enum>
              </property>
              <property name="defaultDropAction">
-              <enum>Qt::MoveAction</enum>
+              <enum>Qt::DropAction::MoveAction</enum>
              </property>
              <property name="selectionMode">
-              <enum>QAbstractItemView::SingleSelection</enum>
+              <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
              </property>
              <property name="selectionBehavior">
-              <enum>QAbstractItemView::SelectRows</enum>
+              <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
              </property>
              <property name="showGrid">
               <bool>false</bool>
@@ -126,42 +126,38 @@ QTableView::item { padding: 3px; }</string>
           <property name="title">
            <string>Coordinates</string>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout_8">
-           <item>
-            <layout class="QGridLayout" name="gridLayout_3">
-             <item row="0" column="1">
-              <widget class="QComboBox" name="pointsFieldComboBox"/>
-             </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="pointsFieldLabel">
-               <property name="maximumSize">
-                <size>
-                 <width>160</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Points Coordinates Field:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="meshFieldLabel">
-               <property name="maximumSize">
-                <size>
-                 <width>160</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Mesh Coordinates Field:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QComboBox" name="meshFieldComboBox"/>
-             </item>
-            </layout>
+          <layout class="QGridLayout" name="gridLayout_5">
+           <item row="0" column="1">
+            <widget class="QComboBox" name="pointsFieldComboBox"/>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="meshFieldLabel">
+             <property name="maximumSize">
+              <size>
+               <width>160</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Mesh Coordinates Field:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QComboBox" name="meshFieldComboBox"/>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="pointsFieldLabel">
+             <property name="maximumSize">
+              <size>
+               <width>160</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Points Coordinates Field:</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -252,6 +248,16 @@ QTableView::item { padding: 3px; }</string>
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="pushButtonDeleteSelectedSurfaceSection">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Delete Selected Surface Section</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -319,13 +325,39 @@ QTableView::item { padding: 3px; }</string>
           <property name="title">
            <string>View</string>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout">
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
            <item>
             <widget class="QPushButton" name="pushButtonViewAll">
              <property name="text">
               <string>View All</string>
              </property>
             </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </widget>
@@ -350,7 +382,7 @@ QTableView::item { padding: 3px; }</string>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
