--- a/mapclientplugins/pointcloudpartitionerstep/qt/pointcloudpartitionerwidget.ui
+++ b/mapclientplugins/pointcloudpartitionerstep/qt/pointcloudpartitionerwidget.ui
@@ -167,7 +167,7 @@ QTableView::item { padding: 3px; }</string>
           <property name="title">
            <string>Selection</string>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout_7">
+          <layout class="QVBoxLayout" name="verticalLayout">
            <item>
             <layout class="QGridLayout" name="gridLayout_2">
              <item row="1" column="1">
@@ -257,6 +257,24 @@ QTableView::item { padding: 3px; }</string>
               <string>Delete Selected Surface Section</string>
              </property>
             </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <item>
+              <widget class="QLabel" name="label_4">
+               <property name="text">
+                <string>Delete History:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="comboBoxDeleteSurfaceHistory">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
           </layout>
          </widget>
